--- a/style/mobileStyle.css
+++ b/style/mobileStyle.css
@@ -28,7 +28,42 @@ header h1 {
 
 }
 main {
-  background-color: red;
-  min-width: 300px;
+  margin: 5px;
+  padding: 5px;
+  margin-top: 15px;
+  min-width: 200px;
   min-height: 400px;
+}
+
+main h2 {
+  font-size: 1.1em;
+  text-align: center;
+}
+
+main section {
+  margin-top: 50px;
+}
+
+main section a {
+  background-color: var(--verde);
+  display: block;
+  padding: 5px;
+  margin-top: 20px;
+  text-align: center;
+  border-radius: 10px;
+  text-decoration: none;
+}
+
+footer {
+  display: block;
+  color: white;
+  height: 10vh;
+  padding: 10px;
+  margin-top: 60px;
+  text-align: center;
+  background-color: rgba(0, 0, 0, 0.801);
+}
+
+footer p {
+  margin-top: 10px;
 }
