--- a/style/mobileStyle.css
+++ b/style/mobileStyle.css
@@ -14,8 +14,10 @@
 body {
   height: 100vh;
 }
-  header {
+
+header {
   background-color: var(--verde);
+  color: white;
   width: 100vw;
   border-radius: 0px 0px 3px 3px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.247);
@@ -36,7 +38,7 @@ main {
 }
 
 main h2 {
-  font-size: 1.1em;
+  font-size: 1.2em;
   text-align: center;
 }
 
@@ -45,8 +47,11 @@ main section {
 }
 
 main section a {
-  background-color: var(--verde);
   display: block;
+  background-color: var(--verde);
+  color: white;
+  font-size: 1.1em;
+  font-weight: bold;
   padding: 5px;
   margin-top: 20px;
   text-align: center;
@@ -66,4 +71,5 @@ footer {
 
 footer p {
   margin-top: 10px;
+  
 }
