--- a/style/votar.css
+++ b/style/votar.css
@@ -20,6 +20,7 @@ header {
   background-color: var(--verde);
   color: white;
   width: 100vw;
+  text-align: center;
   border-radius: 0px 0px 3px 3px;
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.247);
 }
@@ -27,8 +28,7 @@ header {
 header h1 {
   padding: 5px;
   font-size: 1.5em;
-  text-align: center;
-
+  height: 45px;
 }
 
 main {
