--- a/style/bigDevice.css
+++ b/style/bigDevice.css
@@ -1,5 +1,26 @@
 @charset "UTF-8";
 
-body {
-  background-color: green;
+
+header ul.menu-aberto {
+  left: 85%;
+}
+
+main {
+  max-width: 700px;
+}
+main section#sec1 {
+  height: 270px;
+  font-size: 1.3em;
+  padding: 20px;
+}
+
+main section#sec1 p {
+  margin-top: 20px;
+}
+
+
+main section#sec2 a {
+  height: 65px;
+  width: 500px;
+  padding: 20px;
 }
