--- a/style/style.css
+++ b/style/style.css
@@ -4,9 +4,18 @@
 :root {
   --cor-principal: #03D803;
   --var-cor-principal: #1CFF1C;
-  --cor-secundaria: #D9026D;
+  --cor-secundaria: #960080;
   --var-cor-secundaria: #8C0046;
+  --background-color: #2d0042;
 }
+
+::-webkit-scrollbar {
+  background-color: var(--background-color);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--cor-secundaria);
+}
+
 
 * {
   font-family: Arial, Helvetica, sans-serif;
@@ -18,6 +27,8 @@
 
 body {
   height: 100vh;
+  background-image: linear-gradient(to bottom right, var(--background-color) 20%, var(--cor-secundaria));
+
 }
 
 h1, h2, h3 {
@@ -138,7 +149,7 @@ main section#sec1 {
   margin-top: 70px;
   height: 200px;
   padding: 10px;
-  background-color: var(--cor-secundaria);
+  background-color: var(--var-cor-secundaria);
 }
 
 main section#sec2 {
@@ -158,7 +169,7 @@ main a {
   height: 60px;
   padding: 15px;
   margin: auto;
-  border-radius: 5px;
+  border-radius: 10px;
   text-align: center;
   text-decoration: none;
 }
