--- a/style/style.css
+++ b/style/style.css
@@ -2,18 +2,16 @@
 
 
 :root {
-  --cor-principal: #03D803;
-  --var-cor-principal: #1CFF1C;
-  --cor-secundaria: #960080;
-  --var-cor-secundaria: #8C0046;
-  --background-color: #2d0042;
+  --color1: #960080;
+  --color2: #8C0046;
+  --color3: #2d0042;
 }
 
 ::-webkit-scrollbar {
-  background-color: var(--background-color);
+  background-color: var(--color3);
 }
 ::-webkit-scrollbar-thumb {
-  background-color: var(--cor-secundaria);
+  background-color: var(--color2);
 }
 
 
@@ -27,7 +25,7 @@
 
 body {
   height: 100vh;
-  background-image: linear-gradient(to bottom right, var(--background-color) 20%, var(--cor-secundaria));
+  background-image: linear-gradient(to bottom right, var(--color3) 20%, var(--color1));
 
 }
 
@@ -39,7 +37,7 @@ a {
 }
 header {
   position: relative;
-  background-color: var(--cor-secundaria);
+  background-color: var(--color2);
   color: white;
   width: 100vw;
   height: 60px;
@@ -149,7 +147,7 @@ main section#sec1 {
   margin-top: 70px;
   height: 200px;
   padding: 10px;
-  background-color: var(--var-cor-secundaria);
+  background-color: var(--color1);
 }
 
 main section#sec2 {
@@ -159,8 +157,8 @@ main section#sec2 {
 
 main a {
   color: white;
-  background-color: var(--var-cor-secundaria);
-  border: 1px solid var(--cor-secundaria);
+  background-color: var(--color1);
+  border: 1px solid var(--color2);
   text-align: center;
   display: block;
   font-weight: bold;
