--- a/style/form.css
+++ b/style/form.css
@@ -1,10 +1,9 @@
 @charset "UTF-8";
 
 :root {
-   --cor-secundaria: #960080;
-   --var-cor-secundaria: #8C0046;
-   --background-color: #2d0042;
-   --color-div-candidato: var(--var-cor-secundaria);
+   --color1: #960080;
+   --color2: #8C0046;
+   --color3: #2d0042;
 }
 
 ::-webkit-inner-spin-button {
@@ -16,10 +15,10 @@
 }
 
 ::-webkit-scrollbar {
-   background-color: var(--background-color);
+   background-color: var(--color3);
 }
 ::-webkit-scrollbar-thumb {
-   background-color: var(--cor-secundaria);
+   background-color: var(--color1);
 }
 
 * {
@@ -31,7 +30,7 @@
 
 body {
    height: 100vh;
-   background-image: linear-gradient(to bottom right, var(--background-color) 20%, var(--cor-secundaria));
+   background-image: linear-gradient(to bottom right, var(--color3) 20%, var(--color1));
 }
 
 fieldset {
@@ -60,7 +59,7 @@ input {
    color: white;
    width: 35vw;
    height: 45vh;
-   background-color: var(--color-div-candidato);
+   background-color: var(--color2);
    margin: auto;
    margin-top: 50px;
    padding: 15px;
@@ -131,7 +130,7 @@ input {
    margin-left: 15px;
    padding: 7px;
    border-radius: 5px;
-   background-color: var(--background-color);
+   background-color: var(--color3);
 }
 
 
@@ -139,7 +138,7 @@ input {
    position: absolute;
    left: 65%;
    top: 80%;
-   background-color: var(--background-color);
+   background-color: var(--color3);
    color: white;
    font-size: 1.1em;
    font-weight: bold;
