--- a/style/form.css
+++ b/style/form.css
@@ -58,14 +58,22 @@ input {
    font-size: 1.1em;
    color: white;
    width: 35vw;
-   height: 45vh;
+   height: 60vh;
    background-color: var(--color2);
    margin: auto;
    margin-top: 50px;
    padding: 15px;
    border-radius: 20px;
+   transition: 0.5s ease-in;
 }
 
+.titulo-form {
+   margin-top: 20px;
+   color: var(--color3);
+   font-weight: bolder;
+   text-align: center;
+   font-size: 1.7em;
+}
 #user-name {
    width: 100%;
    height: 60px;
@@ -94,6 +102,7 @@ input {
    height: 40px;
    border-radius: 10px;
    padding: 5px;
+   background-color: #53002a;
 }
 
 #Inome:focus {
@@ -101,18 +110,20 @@ input {
 }
 
 #Inome:focus::-webkit-input-placeholder {
-   color: transparent;
+   color: rgb(104, 104, 104);
    transition: 1s;
 }
 
 #Iidade {
    font-weight: 500;
-
    font-size: 0.9em;
    width: 97%;
    height: 40px;
    border-radius: 10px;
    padding: 5px;
+   background-color: #53002a;
+   
+
 }
 
 
@@ -121,7 +132,7 @@ input {
 }
 
 #Iidade:focus::-webkit-input-placeholder {
-   color: transparent;
+   color: rgb(104, 104, 104);
    transition: 1s;
 } 
 
@@ -130,7 +141,7 @@ input {
    margin-left: 15px;
    padding: 7px;
    border-radius: 5px;
-   background-color: var(--color3);
+   background-color: #53002a;
 }
 
 
@@ -146,4 +157,10 @@ input {
    border-radius: 10px;
    width: 30%;
    height: 15%;
+}
+
+@media screen and (max-width: 1336px) {
+   .formulario {
+      width: 60vw;
+   }
 }
