--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@
 
 
 body {
-  height: 100vh;
+  height: 105vh;
   background-image: linear-gradient(to bottom right, var(--color3) 20%, var(--color1));
 
 }
@@ -109,7 +109,7 @@ header menu span#lBaixoMenuIndicador {
 }
 
 header ul.menu-aberto {
-  background-color: #8c0046e2;
+  background-color: var(--color2);
   display: none;
   position: fixed;
   padding: 10px;
@@ -151,16 +151,16 @@ main section#sec1 {
 }
 
 main section#sec2 {
-  margin-top: 220px;
+  margin-top: 300px;
   padding: 5px;
 }
 
 main a {
-  color: white;
+  display: block;
   background-color: var(--color2);
   border: 1px solid var(--color1);
+  color: white;
   text-align: center;
-  display: block;
   font-weight: bold;
   font-size: 1.3em;
   max-width: 350px;
